tests/snapshots/dependencies__lib__fail__package_bin_target.snap
---
source: tests/dependencies.rs
expression: output
---
CMD:
dependencies
--lib

STDERR:
Error: No library target found.

Targets present in package:
- package_bin_target (--bin package_bin_target)


STDOUT:
